# surround-the-cat-test-bot

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
surround_the_cat_test_bot/plugins/nonebot_plugin_surround_the_cat/: __init__.py  config.py
