[project]
name = "surround-the-cat-test-bot"
version = "0.1.0"
description = "surround-the-cat-test-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
authors = [
    {name = "HapiFive", email = "1143910315@qq.com"},
]
dependencies = [
    "tqdm>=4.66.4",
    "networkx>=3.3",
    "requests>=2.32.3",
    "Pillow>=10.3.0",
    "nonebot-adapter-console>=0.6.0",
    "nonebot-adapter-qq>=1.4.4",
    "nonebot-adapter-onebot>=2.4.3",
]
license = {text = "MIT"}

[tool.nonebot]
adapters = [
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = []
plugin_dirs = ["surround_the_cat_test_bot/plugins"]
builtin_plugins = []

[tool.pdm]
distribution = false
